# gentei_but_jank

./: Cargo.toml
comment_scrapper/: downloader.py  requirements.txt
migrations/: 0001_init.sql
src/: check_wrapper.rs  guide_text.md  main.rs  roles_sync.rs  url_parse.rs  util.rs  verification.rs  youtube_req.rs
